--- a/templates/galaxia.html
+++ b/templates/galaxia.html
@@ -48,8 +48,7 @@
 
 <body>
     <div class="header-overlay">
-        <h1>Galaxia</h1>
-        <h2>Dedicado a Monserrat</h2>
+        <h1>Eres Mi Galaxia</h1>
     </div>
 
     <div id="canvas-container"></div>
